--- a/public/404.html
+++ b/public/404.html
@@ -23,7 +23,7 @@
     <title>404 Page not found</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
