--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
     <title>About</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
