--- a/public/powershellscript-ohne-fenster/index.html
+++ b/public/powershellscript-ohne-fenster/index.html
@@ -29,7 +29,7 @@ launchpwrshl.vbs meinscript.ps1 Nützlich, wenn man ein Powershellscript als Auf
     <title>Powershellscript ohne Fenster</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
