--- a/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
+++ b/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
@@ -29,7 +29,7 @@ Aber seht selbst. Und viel Spaß ;-)" />
     <title>Satanic Temple Gathering &#43; Gegenprotest = Cringefest 9000</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
