--- a/public/update-februar-2024/index.html
+++ b/public/update-februar-2024/index.html
@@ -27,7 +27,7 @@ In der Zwischenzeit hatte ich alle meine Webspace&rsquo;s, Domains, etc. gekünd
     <title>Update Februar 2024</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
