--- a/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
+++ b/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
@@ -27,7 +27,7 @@ Und ich stelle mir so die Frage, warum haben wir hier ein Braunschweig (oder in 
     <title>Warum gibts in Braunschweig nicht so eine Radtour?</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
