--- a/public/ampler-stout-2019-2020-spezifikationsliste/index.html
+++ b/public/ampler-stout-2019-2020-spezifikationsliste/index.html
@@ -27,7 +27,7 @@ Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&quot;, 12 mm Steckachse 
     <title>Ampler Stout 2019 - 2020 Spezifikationsliste</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
