--- a/public/hallo/index.html
+++ b/public/hallo/index.html
@@ -25,7 +25,7 @@
     <title>Hallo</title>
 </head>
 <body><header id="banner">
-    <h2><a href="https://krinkko.github.io/">d381blog</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
