--- a/public/404.html
+++ b/public/404.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </nav>
-    <h3>d381test</h3>
+    <small>d381test</small>
 </header>
 <main id="content">
 
