--- a/public/about/index.html
+++ b/public/about/index.html
@@ -37,7 +37,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
             </li>
         </ul>
     </nav>
-    <h3>d381test</h3>
+    <small>d381test</small>
 </header>
 <main id="content">
 <article>
