--- a/public/hallo/index.html
+++ b/public/hallo/index.html
@@ -35,7 +35,7 @@
             </li>
         </ul>
     </nav>
-    <h3>d381test</h3>
+    <small>d381test</small>
 </header>
 <main id="content">
 <article>
