--- a/public/update-februar-2024/index.html
+++ b/public/update-februar-2024/index.html
@@ -37,7 +37,7 @@ In der Zwischenzeit hatte ich alle meine Webspace&rsquo;s, Domains, etc. gekünd
             </li>
         </ul>
     </nav>
-    <h3>d381test</h3>
+    <small>d381test</small>
 </header>
 <main id="content">
 <article>
