--- a/public/ampler-stout-2019-2020-spezifikationsliste/index.html
+++ b/public/ampler-stout-2019-2020-spezifikationsliste/index.html
@@ -37,7 +37,7 @@ Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&quot;, 12 mm Steckachse 
             </li>
         </ul>
     </nav>
-    <small>d381test</small>
+    <p><small>d381test</small></p>
 </header>
 <main id="content">
 <article>
