--- a/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
+++ b/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
@@ -39,7 +39,7 @@ Aber seht selbst. Und viel Spaß ;-)" />
             </li>
         </ul>
     </nav>
-    <small>d381test</small>
+    <p><small>d381test</small></p>
 </header>
 <main id="content">
 <article>
