--- a/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
+++ b/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
@@ -37,7 +37,7 @@ Und ich stelle mir so die Frage, warum haben wir hier ein Braunschweig (oder in 
             </li>
         </ul>
     </nav>
-    <small>d381test</small>
+    <p><small>d381test</small></p>
 </header>
 <main id="content">
 <article>
