--- a/public/404.html
+++ b/public/404.html
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </nav>
-    <small>d381test</small>
+    <p><small>d381test</small></p>
 </header>
 <main id="content">
 
