--- a/public/powershellscript-ohne-fenster/index.html
+++ b/public/powershellscript-ohne-fenster/index.html
@@ -39,7 +39,7 @@ launchpwrshl.vbs meinscript.ps1 Nützlich, wenn man ein Powershellscript als Auf
             </li>
         </ul>
     </nav>
-    <small>d381test</small>
+    <p><small>d381test</small></p>
 </header>
 <main id="content">
 <article>
