--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html lang="de"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="kleiner sysadmin blog mit einigen gedanken, die auch gern mal von IT abschweifen">
+    <meta name="description" content="raunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
     
     <link rel="shortcut icon" href="https://krinkko.github.io/favicon.ico">
     
@@ -37,7 +37,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
             </li>
         </ul>
     </nav>
-    <p><small>kleiner sysadmin blog mit einigen gedanken, die auch gern mal von IT abschweifen</small></p>
+    <p><small>raunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3</small></p>
 </header>
 <main id="content">
 <article>
