--- a/public/404.html
+++ b/public/404.html
@@ -40,7 +40,7 @@
 404. :suspect:
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
