--- a/public/about/index.html
+++ b/public/about/index.html
@@ -50,7 +50,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
