--- a/public/ampler-stout-2019-2020-spezifikationsliste/index.html
+++ b/public/ampler-stout-2019-2020-spezifikationsliste/index.html
@@ -173,7 +173,7 @@ Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&quot;, 12 mm Steckachse 
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
