--- a/public/powershellscript-ohne-fenster/index.html
+++ b/public/powershellscript-ohne-fenster/index.html
@@ -74,7 +74,7 @@ launchpwrshl.vbs meinscript.ps1 Nützlich, wenn man ein Powershellscript als Auf
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
