--- a/public/update-februar-2024/index.html
+++ b/public/update-februar-2024/index.html
@@ -59,7 +59,7 @@ In der Zwischenzeit hatte ich alle meine Webspace&rsquo;s, Domains, etc. gekünd
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
