--- a/public/hallo/index.html
+++ b/public/hallo/index.html
@@ -51,7 +51,7 @@ Ich hatte nun ein wenig Zeit mit dem VPS von 1u1 Ionos zu spielen und hab mich l
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
