--- a/public/not-just-bikes-climate-town-mit-städtebauvergleich/index.html
+++ b/public/not-just-bikes-climate-town-mit-städtebauvergleich/index.html
@@ -75,7 +75,7 @@
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
