--- a/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
+++ b/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
@@ -71,7 +71,7 @@ Und ich stelle mir so die Frage, warum haben wir hier ein Braunschweig (oder in 
 </section>
 
         </main><footer id="footer">
-    © 2022 d381blog
+    © {{ PAGE.Lastmod }} d381blog
 
     <nav>
         <ul>
