--- a/public/404.html
+++ b/public/404.html
@@ -23,6 +23,13 @@
     <title>404 Page not found</title>
 </head>
 <body><header id="banner">
+    <div class="headerauthor">
+        <p class="headerauthor_pic">
+            
+            <img src="/images/123sawd.jpg">
+        </p>
+        <p class="headerauthor_desc"></p>
+    </div>
     <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
@@ -34,6 +41,7 @@
         </ul>
     </nav>
     <p><small>Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3</small></p>
+    
 </header>
 <main id="content">
 
