--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,6 +27,13 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
     <title>About</title>
 </head>
 <body><header id="banner">
+    <div class="headerauthor">
+        <p class="headerauthor_pic">
+            
+            <img src="/images/123sawd.jpg">
+        </p>
+        <p class="headerauthor_desc"></p>
+    </div>
     <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
@@ -38,6 +45,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
         </ul>
     </nav>
     <p><small>Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3</small></p>
+    
 </header>
 <main id="content">
 <article>
