--- a/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
+++ b/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
@@ -29,6 +29,13 @@ Aber seht selbst. Und viel Spaß ;-)" />
     <title>Satanic Temple Gathering &#43; Gegenprotest = Cringefest 9000</title>
 </head>
 <body><header id="banner">
+    <div class="headerauthor">
+        <p class="headerauthor_pic">
+            
+            <img src="/images/123sawd.jpg">
+        </p>
+        <p class="headerauthor_desc"></p>
+    </div>
     <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
@@ -40,6 +47,7 @@ Aber seht selbst. Und viel Spaß ;-)" />
         </ul>
     </nav>
     <p><small>Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3</small></p>
+    
 </header>
 <main id="content">
 <article>
