--- a/matrix-docker-compose-install-telegrambot/index.html
+++ b/matrix-docker-compose-install-telegrambot/index.html
@@ -131,6 +131,13 @@
     <title>Matrix Docker Compose Install (&#43;TelegramBot)</title>
 </head>
 <body><header id="banner">
+    <div class="headerauthor">
+        <p class="headerauthor_pic">
+            
+            <img src="/images/123sawd.jpg">
+        </p>
+        <p class="headerauthor_desc">test2</p>
+    </div>
     <h2><a href="http://localhost:1313/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
@@ -142,6 +149,7 @@
         </ul>
     </nav>
     <p><small>Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3</small></p>
+    
 </header>
 <main id="content">
 <article>
