--- a/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
+++ b/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
@@ -43,6 +43,8 @@ Aber seht selbst. Und viel Spaß ;-)" />
                 <a href="/" title="posts">posts</a>
             </li><li>
                 <a href="/about/" title="about">about</a>
+            </li><li>
+                <a href="/posts-archive" title="archive">archive</a>
             </li>
         </ul>
     </nav>
