--- a/public/update-februar-2024/index.html
+++ b/public/update-februar-2024/index.html
@@ -41,6 +41,8 @@ In der Zwischenzeit hatte ich alle meine Webspace&rsquo;s, Domains, etc. gekünd
                 <a href="/" title="posts">posts</a>
             </li><li>
                 <a href="/about/" title="about">about</a>
+            </li><li>
+                <a href="/posts-archive" title="archive">archive</a>
             </li>
         </ul>
     </nav>
