--- a/public/about/index.html
+++ b/public/about/index.html
@@ -41,6 +41,8 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
                 <a href="/" title="posts">posts</a>
             </li><li>
                 <a href="/about/" title="about">about</a>
+            </li><li>
+                <a href="/posts-archive" title="archive">archive</a>
             </li>
         </ul>
     </nav>
