--- a/public/schaukelaufbaublues/index.html
+++ b/public/schaukelaufbaublues/index.html
@@ -44,6 +44,8 @@ Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeins
                 <a href="/" title="posts">posts</a>
             </li><li>
                 <a href="/about/" title="about">about</a>
+            </li><li>
+                <a href="/posts-archive" title="archive">archive</a>
             </li>
         </ul>
     </nav>
