--- a/public/powershellscript-ohne-fenster/index.html
+++ b/public/powershellscript-ohne-fenster/index.html
@@ -44,7 +44,7 @@ launchpwrshl.vbs meinscript.ps1 Nützlich, wenn man ein Powershellscript als Auf
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
