--- a/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
+++ b/public/warum-gibts-in-braunschweig-nicht-so-eine-radtour/index.html
@@ -42,7 +42,7 @@ Und ich stelle mir so die Frage, warum haben wir hier ein Braunschweig (oder in 
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
