--- a/public/404.html
+++ b/public/404.html
@@ -38,7 +38,7 @@
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
