--- a/public/about/index.html
+++ b/public/about/index.html
@@ -42,7 +42,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
