--- a/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
+++ b/public/satanic-temple-gathering--gegenprotest-cringefest-9000/index.html
@@ -44,7 +44,7 @@ Aber seht selbst. Und viel Spaß ;-)" />
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
