--- a/public/schaukelaufbaublues/index.html
+++ b/public/schaukelaufbaublues/index.html
@@ -45,7 +45,7 @@ Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeins
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
