--- a/public/update-februar-2024/index.html
+++ b/public/update-februar-2024/index.html
@@ -42,7 +42,7 @@ In der Zwischenzeit hatte ich alle meine Webspace&rsquo;s, Domains, etc. gekünd
             </li><li>
                 <a href="/about/" title="about">about</a>
             </li><li>
-                <a href="/posts-archive" title="archive">archive</a>
+                <a href="/posts-archive/" title="archive">archive</a>
             </li>
         </ul>
     </nav>
