--- a/public/schaukelaufbaublues/index.html
+++ b/public/schaukelaufbaublues/index.html
@@ -118,7 +118,7 @@ Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeins
     
     <img 
  
-   alt="Einige Updates sammelten sich auf dem WSUS an" title="Einige Updates sammelten sich auf dem WSUS an" src="https://krinkko.github.io/schaukelaufbaublues/dsc_0980.jpg" class="img-fluid lazyload">
+   alt="Einige Updates sammelten sich auf dem WSUS an" title="Einige Updates sammelten sich auf dem WSUS an" src="https://krinkko.github.io/schaukelaufbaublues/DSC_0980.JPG" class="img-fluid lazyload">
 
 </picture>
 </a>
