--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
             
             </div></header><p>Vielleicht habt ihr ja von &ldquo;Searxng&rdquo; gehört. Das ist eine Metasuchmaschine, die man selbst in sogenannten Instanzen betreiben und nutzen kann. Sie durchsucht andere Suchmaschinen nach Ergebnissen und stellt sich selbst als besonders Datenschutzfreundlich dar.</p>
 <img src="searxng.svg">
-<p>Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf <a href="https://github.com/searxng/searxng">Searxng Github</a> vorbei. Oder, ihr nehmt einfach <a href="https://www.gruble.de">Gruble.de</a>, eine fertige Instanz vom Admin von <a href="https://www.adminforge.de">Adminforge.de</a>. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.</p>
+<p>Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf <a href="https://github.com/searxng/searxng">Searxng Github</a> vorbei. Oder ihr nehmt einfach <a href="https://www.gruble.de">Gruble.de</a>, eine fertige Instanz vom Admin von <a href="https://www.adminforge.de">Adminforge.de</a>. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.</p>
 </article>
     
 	<article class="article-frontpage">
