--- a/public/searxng-als-standardbrowser/index.html
+++ b/public/searxng-als-standardbrowser/index.html
@@ -12,13 +12,13 @@
 
     <meta name="twitter:card" content="summary"><meta name="twitter:title" content="Searxng als Standardbrowser">
 <meta name="twitter:description" content="Vielleicht habt ihr ja von &ldquo;Searxng&rdquo; gehört. Das ist eine Metasuchmaschine, die man selbst in sogenannten Instanzen betreiben und nutzen kann. Sie durchsucht andere Suchmaschinen nach Ergebnissen und stellt sich selbst als besonders Datenschutzfreundlich dar.
-Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf Searxng Github vorbei. Oder, ihr nehmt einfach Gruble.de, eine fertige Instanz vom Admin von Adminforge.de. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.">
+Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf Searxng Github vorbei. Oder ihr nehmt einfach Gruble.de, eine fertige Instanz vom Admin von Adminforge.de. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.">
 
     <meta property="og:url" content="http://localhost:1313/searxng-als-standardbrowser/">
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="Searxng als Standardbrowser">
   <meta property="og:description" content="Vielleicht habt ihr ja von &amp;ldquo;Searxng&amp;rdquo; gehört. Das ist eine Metasuchmaschine, die man selbst in sogenannten Instanzen betreiben und nutzen kann. Sie durchsucht andere Suchmaschinen nach Ergebnissen und stellt sich selbst als besonders Datenschutzfreundlich dar.
-Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf Searxng Github vorbei. Oder, ihr nehmt einfach Gruble.de, eine fertige Instanz vom Admin von Adminforge.de. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.">
+Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf Searxng Github vorbei. Oder ihr nehmt einfach Gruble.de, eine fertige Instanz vom Admin von Adminforge.de. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.">
   <meta property="og:locale" content="de-de">
   <meta property="og:type" content="article">
   <meta property="article:section" content="posts">
@@ -72,7 +72,7 @@ Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, sc
             
             </div></header><p>Vielleicht habt ihr ja von &ldquo;Searxng&rdquo; gehört. Das ist eine Metasuchmaschine, die man selbst in sogenannten Instanzen betreiben und nutzen kann. Sie durchsucht andere Suchmaschinen nach Ergebnissen und stellt sich selbst als besonders Datenschutzfreundlich dar.</p>
 <img src="searxng.svg">
-<p>Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf <a href="https://github.com/searxng/searxng">Searxng Github</a> vorbei. Oder, ihr nehmt einfach <a href="https://www.gruble.de">Gruble.de</a>, eine fertige Instanz vom Admin von <a href="https://www.adminforge.de">Adminforge.de</a>. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.</p>
+<p>Wer daran interessiert ist, die Suchmaschine mal selbstverwaltet aufzusetzen, schaut einfach mal auf <a href="https://github.com/searxng/searxng">Searxng Github</a> vorbei. Oder ihr nehmt einfach <a href="https://www.gruble.de">Gruble.de</a>, eine fertige Instanz vom Admin von <a href="https://www.adminforge.de">Adminforge.de</a>. Letztere nehmen wir nun auch einfach mal raus, um Gruble (oder besser gesagt Searngx) auf unserem Firefox Mobile zu nutzen.</p>
 </article>
 <section id="related-content">
 </section>
