--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,18 +10,17 @@
 
     <script language="javascript" type="text/javascript"  src="/js/lazysizes.min.js"></script>
 
-    <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="About"/>
+    <meta name="twitter:card" content="summary"><meta name="twitter:title" content="About">
 <meta name="twitter:description" content="Hallo Welt! Der d381blog ist ein Miniblog von Dion, also von mir, auf dem ich meistens experimentiere und vielleicht auch ein bisschen was zu Musik, Adminkram, Fahrrädern und dem Dasein als Papa schreiben werde. Hauptsächlich allerdings Experimente.
-Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezogen oder verstummt sind und daher habe ich mich dieses Mal dazu entschieden das Ganze hier so klein wie möglich zu bauen - und so kam ich dann doch noch zu Hugo, dem static site generator."/>
+Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezogen oder verstummt sind und daher habe ich mich dieses Mal dazu entschieden das Ganze hier so klein wie möglich zu bauen - und so kam ich dann doch noch zu Hugo, dem static site generator.">
 
-    <meta property="og:title" content="About" />
-<meta property="og:description" content="Hallo Welt! Der d381blog ist ein Miniblog von Dion, also von mir, auf dem ich meistens experimentiere und vielleicht auch ein bisschen was zu Musik, Adminkram, Fahrrädern und dem Dasein als Papa schreiben werde. Hauptsächlich allerdings Experimente.
-Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezogen oder verstummt sind und daher habe ich mich dieses Mal dazu entschieden das Ganze hier so klein wie möglich zu bauen - und so kam ich dann doch noch zu Hugo, dem static site generator." />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="https://krinkko.github.io/about/" /><meta property="article:section" content="" />
-
-
-
+    <meta property="og:url" content="https://krinkko.github.io/about/">
+  <meta property="og:site_name" content="krinkko&#39;s">
+  <meta property="og:title" content="About">
+  <meta property="og:description" content="Hallo Welt! Der d381blog ist ein Miniblog von Dion, also von mir, auf dem ich meistens experimentiere und vielleicht auch ein bisschen was zu Musik, Adminkram, Fahrrädern und dem Dasein als Papa schreiben werde. Hauptsächlich allerdings Experimente.
+Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezogen oder verstummt sind und daher habe ich mich dieses Mal dazu entschieden das Ganze hier so klein wie möglich zu bauen - und so kam ich dann doch noch zu Hugo, dem static site generator.">
+  <meta property="og:locale" content="de-de">
+  <meta property="og:type" content="article">
 
 
     <title>About</title>
@@ -50,7 +49,7 @@ Ich hatte in der Vergangenheit schon einige Blogprojekte, die immer mal umgezoge
 </section>
 
         </main><footer id="footer">
-    © {{ PAGE.Lastmod }} d381blog
+    © 2024 d381blog
 
     <nav>
         <ul>
