--- a/public/404.html
+++ b/public/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="de"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="de"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
     
-    <link rel="shortcut icon" href="http://localhost:1313/favicon.ico">
+    <link rel="shortcut icon" href="https://krinkko.github.io/favicon.ico">
     
     <link rel="stylesheet" href="/css/style.min.css">
 
@@ -13,11 +13,7 @@
     <meta name="twitter:card" content="summary"><meta name="twitter:title" content="404 Page not found">
 <meta name="twitter:description" content="Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
 
-<<<<<<< HEAD
     <meta property="og:url" content="https://krinkko.github.io/404.html">
-=======
-    <meta property="og:url" content="http://localhost:1313/404.html">
->>>>>>> 642240198c990d50d35e31ca2371a348352a162a
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
@@ -35,7 +31,7 @@
         </p>
         <p class="headerauthor_desc"></p>
     </div>
-    <h2><a href="http://localhost:1313/">krinkko&#39;s</a></h2>
+    <h2><a href="https://krinkko.github.io/">krinkko&#39;s</a></h2>
     <nav>
         <ul>
             <li>
