--- a/public/posts-archive/index.html
+++ b/public/posts-archive/index.html
@@ -10,14 +10,16 @@
 
     <script language="javascript" type="text/javascript"  src="/js/lazysizes.min.js"></script>
 
-    <meta name="twitter:card" content="summary"><meta name="twitter:title" content="Posts Archive">
-<meta name="twitter:description" content="This page contains an archive of all posts.">
+    
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Posts Archive">
+  <meta name="twitter:description" content="This page contains an archive of all posts.">
 
     <meta property="og:url" content="https://krinkko.github.io/posts-archive/">
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="Posts Archive">
   <meta property="og:description" content="This page contains an archive of all posts.">
-  <meta property="og:locale" content="de-de">
+  <meta property="og:locale" content="de_de">
   <meta property="og:type" content="article">
     <meta property="article:section" content="posts">
 
