--- a/public/404.html
+++ b/public/404.html
@@ -10,14 +10,16 @@
 
     <script language="javascript" type="text/javascript"  src="/js/lazysizes.min.js"></script>
 
-    <meta name="twitter:card" content="summary"><meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
+    
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="404 Page not found">
+  <meta name="twitter:description" content="Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
 
     <meta property="og:url" content="https://krinkko.github.io/404.html">
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles &lt;3">
-  <meta property="og:locale" content="de-de">
+  <meta property="og:locale" content="de_de">
   <meta property="og:type" content="website">
 
 
