--- a/public/not-just-bikes-climate-town-mit-städtebauvergleich/index.html
+++ b/public/not-just-bikes-climate-town-mit-städtebauvergleich/index.html
@@ -16,12 +16,12 @@
 
     
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Not Just Bikes & Climate Town mit Städtebauvergleich">
+  <meta name="twitter:title" content="Not Just Bikes &amp; Climate Town mit Städtebauvergleich">
   <meta name="twitter:description" content="Also ihr solltet euch unbedingt mal diese Kollaboration von Not Just Bikes und Climate Town in zwei Teilen ansehen. Die beiden verdeutlichen ziemlich genial die Unterschiede zwischen Amsterdam und im Prinzip den meisten verkackten US Städten:">
 
     <meta property="og:url" content="https://krinkko.github.io/not-just-bikes-climate-town-mit-st%C3%A4dtebauvergleich/">
   <meta property="og:site_name" content="krinkko&#39;s">
-  <meta property="og:title" content="Not Just Bikes & Climate Town mit Städtebauvergleich">
+  <meta property="og:title" content="Not Just Bikes &amp; Climate Town mit Städtebauvergleich">
   <meta property="og:description" content="Also ihr solltet euch unbedingt mal diese Kollaboration von Not Just Bikes und Climate Town in zwei Teilen ansehen. Die beiden verdeutlichen ziemlich genial die Unterschiede zwischen Amsterdam und im Prinzip den meisten verkackten US Städten:">
   <meta property="og:locale" content="de_de">
   <meta property="og:type" content="article">
