--- a/public/schaukelaufbaublues/index.html
+++ b/public/schaukelaufbaublues/index.html
@@ -20,14 +20,14 @@
   <meta name="twitter:title" content="Schaukelaufbaublues">
   <meta name="twitter:description" content="Eigentlich ist es ja ein etwas später Zug über unseren “neuen” Schrebergarten hier direkt mit dem Aufbau unserer brand neuen Kinderschaukel zu starten, aber was solls…
 Kurz vorweg: Ich hätte nicht gedacht, dass es so ein Akt ist ein Schaukelgestell aufzustellen, aber lest erst mal rein hier.
-Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeinsam die Schaukel aufzubauen und früh am Morgen mahnte meine Frau noch: “Hast du alles Werkzeug?” Und ich nur so: “Jaja, ich hab alles” Alles ganz locker, dachte ich mir so. Also, hätte ich mal auf meine Frau gehört :D">
+Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeinsam die Schaukel aufzubauen und früh am Morgen mahnte meine Frau noch: “Hast du alles Werkzeug?">
 
     <meta property="og:url" content="https://krinkko.github.io/schaukelaufbaublues/">
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="Schaukelaufbaublues">
   <meta property="og:description" content="Eigentlich ist es ja ein etwas später Zug über unseren “neuen” Schrebergarten hier direkt mit dem Aufbau unserer brand neuen Kinderschaukel zu starten, aber was solls…
 Kurz vorweg: Ich hätte nicht gedacht, dass es so ein Akt ist ein Schaukelgestell aufzustellen, aber lest erst mal rein hier.
-Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeinsam die Schaukel aufzubauen und früh am Morgen mahnte meine Frau noch: “Hast du alles Werkzeug?” Und ich nur so: “Jaja, ich hab alles” Alles ganz locker, dachte ich mir so. Also, hätte ich mal auf meine Frau gehört :D">
+Extra für Samstag Vormittag hatte ich einen guten Freund dazugeholt, um gemeinsam die Schaukel aufzubauen und früh am Morgen mahnte meine Frau noch: “Hast du alles Werkzeug?">
   <meta property="og:locale" content="de_de">
   <meta property="og:type" content="article">
     <meta property="article:section" content="posts">
