--- a/public/update-februar-2024/index.html
+++ b/public/update-februar-2024/index.html
@@ -18,13 +18,13 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Update Februar 2024">
   <meta name="twitter:description" content="Moin! Lang nix hier auf der Page gemacht. Ich habe eigentlich sogar vergessen, dass das Repo noch existiert. Allerdings brauchte ich auch mal wieder was zum Basteln, also bin ich mal wieder kurz zurückgekehrt.
-In der Zwischenzeit hatte ich alle meine Webspace’s, Domains, etc. gekündigt. Gebrauchten konnte ich sie nicht und Zeit für Projekte habe ich ebenfalls nicht mehr. Mein Ziel ist es, irgendwann wenn mal ein paar Taler übrig sind, ein Synology 723&#43; NAS zu kaufen und damit dann mal ein bisschen den Haushalt auf Vordermann zu bringen. Sprich Paperless und so weiter drauf.">
+In der Zwischenzeit hatte ich alle meine Webspace’s, Domains, etc. gekündigt. Gebrauchten konnte ich sie nicht und Zeit für Projekte habe ich ebenfalls nicht mehr. Mein Ziel ist es, irgendwann wenn mal ein paar Taler übrig sind, ein Synology 723&#43; NAS zu kaufen und damit dann mal ein bisschen den Haushalt auf Vordermann zu bringen.">
 
     <meta property="og:url" content="https://krinkko.github.io/update-februar-2024/">
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="Update Februar 2024">
   <meta property="og:description" content="Moin! Lang nix hier auf der Page gemacht. Ich habe eigentlich sogar vergessen, dass das Repo noch existiert. Allerdings brauchte ich auch mal wieder was zum Basteln, also bin ich mal wieder kurz zurückgekehrt.
-In der Zwischenzeit hatte ich alle meine Webspace’s, Domains, etc. gekündigt. Gebrauchten konnte ich sie nicht und Zeit für Projekte habe ich ebenfalls nicht mehr. Mein Ziel ist es, irgendwann wenn mal ein paar Taler übrig sind, ein Synology 723&#43; NAS zu kaufen und damit dann mal ein bisschen den Haushalt auf Vordermann zu bringen. Sprich Paperless und so weiter drauf.">
+In der Zwischenzeit hatte ich alle meine Webspace’s, Domains, etc. gekündigt. Gebrauchten konnte ich sie nicht und Zeit für Projekte habe ich ebenfalls nicht mehr. Mein Ziel ist es, irgendwann wenn mal ein paar Taler übrig sind, ein Synology 723&#43; NAS zu kaufen und damit dann mal ein bisschen den Haushalt auf Vordermann zu bringen.">
   <meta property="og:locale" content="de_de">
   <meta property="og:type" content="article">
     <meta property="article:section" content="posts">
