--- a/public/ampler-stout-2019-2020-spezifikationsliste/index.html
+++ b/public/ampler-stout-2019-2020-spezifikationsliste/index.html
@@ -18,13 +18,13 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Ampler Stout 2019 - 2020 Spezifikationsliste">
   <meta name="twitter:description" content="Kleiner Dump der Spezifikationsliste für mein Ampler Stout 2019. Einfach, damit ich es leichter wiederfinde. Vielleicht ja auch für Dich interessant :)
-Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&#34;, 12 mm Steckachse Kurbelgarnitur Aluminium-Legierung 42T, 170 mm Tretlager Abgedichtetes Tretlager mit Drehmomentsensor Antrieb Shimano Deore RD-T6000 10-Gang Kasette Shimano HG500 11-32 Kette Yaban SLA-H10 114L Bremsen Shimano Deore T6000 hydraulische Scheibenbremsen Bremsbeläge Shimano G02S Reifen Continental Top Contact II, 42-622 mm Laufräder 28&#34; Laufräder mit asymmetrischen 18 mm Felgen und gedichteten, industriegelagerten Naben Schutzbleche Ampler Aluminium Schutzbleche, 60 mm Gewicht 17,2 kg Max. Unterstützung 25 km/h Reichweite 45-100 km je nach Gelände und Einstellung der Unterstützung, durchschnittliche Reichweite 70 km Batterie 48 V 336 Wh LG Li-ion Akku Motor 48 V 250 W Nabenmotor (Hinterrad) Kontrollmodus Präzise Pedal-Drehmoment spürende Motorsteuerung, 2 Motor-Unterstützungsstufen Konnektivität Smartphone-Konnektivität ermöglicht u.a. die Änderung von Motoreinstellungen Ladegerät 3A Li-Ionen-Ladegerät mit Rosenberger Magnetstecker Ladezeit 2,5 Stunden (100%) Lichter Vorne: Busch&#43;Müller IQ2 EYC Hinten: LightSKIN in der Sattelstütze integrierte LED-Lichter So. Passt.">
+Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&#34;, 12 mm Steckachse Kurbelgarnitur Aluminium-Legierung 42T, 170 mm Tretlager Abgedichtetes Tretlager mit Drehmomentsensor Antrieb Shimano Deore RD-T6000 10-Gang Kasette Shimano HG500 11-32 Kette Yaban SLA-H10 114L Bremsen Shimano Deore T6000 hydraulische Scheibenbremsen Bremsbeläge Shimano G02S Reifen Continental Top Contact II, 42-622 mm Laufräder 28&#34; Laufräder mit asymmetrischen 18 mm Felgen und gedichteten, industriegelagerten Naben Schutzbleche Ampler Aluminium Schutzbleche, 60 mm Gewicht 17,2 kg Max.">
 
     <meta property="og:url" content="https://krinkko.github.io/ampler-stout-2019-2020-spezifikationsliste/">
   <meta property="og:site_name" content="krinkko&#39;s">
   <meta property="og:title" content="Ampler Stout 2019 - 2020 Spezifikationsliste">
   <meta property="og:description" content="Kleiner Dump der Spezifikationsliste für mein Ampler Stout 2019. Einfach, damit ich es leichter wiederfinde. Vielleicht ja auch für Dich interessant :)
-Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&#34;, 12 mm Steckachse Kurbelgarnitur Aluminium-Legierung 42T, 170 mm Tretlager Abgedichtetes Tretlager mit Drehmomentsensor Antrieb Shimano Deore RD-T6000 10-Gang Kasette Shimano HG500 11-32 Kette Yaban SLA-H10 114L Bremsen Shimano Deore T6000 hydraulische Scheibenbremsen Bremsbeläge Shimano G02S Reifen Continental Top Contact II, 42-622 mm Laufräder 28&#34; Laufräder mit asymmetrischen 18 mm Felgen und gedichteten, industriegelagerten Naben Schutzbleche Ampler Aluminium Schutzbleche, 60 mm Gewicht 17,2 kg Max. Unterstützung 25 km/h Reichweite 45-100 km je nach Gelände und Einstellung der Unterstützung, durchschnittliche Reichweite 70 km Batterie 48 V 336 Wh LG Li-ion Akku Motor 48 V 250 W Nabenmotor (Hinterrad) Kontrollmodus Präzise Pedal-Drehmoment spürende Motorsteuerung, 2 Motor-Unterstützungsstufen Konnektivität Smartphone-Konnektivität ermöglicht u.a. die Änderung von Motoreinstellungen Ladegerät 3A Li-Ionen-Ladegerät mit Rosenberger Magnetstecker Ladezeit 2,5 Stunden (100%) Lichter Vorne: Busch&#43;Müller IQ2 EYC Hinten: LightSKIN in der Sattelstütze integrierte LED-Lichter So. Passt.">
+Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&#34;, 12 mm Steckachse Kurbelgarnitur Aluminium-Legierung 42T, 170 mm Tretlager Abgedichtetes Tretlager mit Drehmomentsensor Antrieb Shimano Deore RD-T6000 10-Gang Kasette Shimano HG500 11-32 Kette Yaban SLA-H10 114L Bremsen Shimano Deore T6000 hydraulische Scheibenbremsen Bremsbeläge Shimano G02S Reifen Continental Top Contact II, 42-622 mm Laufräder 28&#34; Laufräder mit asymmetrischen 18 mm Felgen und gedichteten, industriegelagerten Naben Schutzbleche Ampler Aluminium Schutzbleche, 60 mm Gewicht 17,2 kg Max.">
   <meta property="og:locale" content="de_de">
   <meta property="og:type" content="article">
     <meta property="article:section" content="posts">
@@ -81,106 +81,106 @@ Komponenten Rahmen Aluminium 6061 Gabel Aluminium 1 1/8&#34;, 12 mm Steckachse K
             
             </div></header><p>Kleiner Dump der Spezifikationsliste für mein Ampler Stout 2019. Einfach, damit ich es leichter wiederfinde. Vielleicht ja auch für Dich interessant :)</p>
 <table>
-  <thead>
-      <tr>
-          <th style="text-align: left">Komponenten</th>
-          <th style="text-align: left"></th>
-      </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <td style="text-align: left">Rahmen</td>
-          <td style="text-align: left">Aluminium 6061</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Gabel</td>
-          <td style="text-align: left">Aluminium 1 1/8&quot;, 12 mm Steckachse</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Kurbelgarnitur</td>
-          <td style="text-align: left">Aluminium-Legierung 42T, 170 mm</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Tretlager</td>
-          <td style="text-align: left">Abgedichtetes Tretlager mit Drehmomentsensor</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Antrieb</td>
-          <td style="text-align: left">Shimano Deore RD-T6000 10-Gang</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Kasette</td>
-          <td style="text-align: left">Shimano HG500 11-32</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Kette</td>
-          <td style="text-align: left">Yaban SLA-H10 114L</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Bremsen</td>
-          <td style="text-align: left">Shimano Deore T6000 hydraulische Scheibenbremsen</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Bremsbeläge</td>
-          <td style="text-align: left">Shimano G02S</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Reifen</td>
-          <td style="text-align: left">Continental Top Contact II, 42-622 mm</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Laufräder</td>
-          <td style="text-align: left">28&quot; Laufräder mit asymmetrischen 18 mm Felgen und gedichteten, industriegelagerten Naben</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Schutzbleche</td>
-          <td style="text-align: left">Ampler Aluminium Schutzbleche, 60 mm</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Gewicht</td>
-          <td style="text-align: left">17,2 kg</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Max. Unterstützung</td>
-          <td style="text-align: left">25 km/h</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Reichweite</td>
-          <td style="text-align: left">45-100 km je nach Gelände und Einstellung der Unterstützung, durchschnittliche Reichweite 70 km</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Batterie</td>
-          <td style="text-align: left">48 V 336 Wh LG Li-ion Akku</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Motor</td>
-          <td style="text-align: left">48 V 250 W Nabenmotor (Hinterrad)</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Kontrollmodus</td>
-          <td style="text-align: left">Präzise Pedal-Drehmoment spürende Motorsteuerung, 2 Motor-Unterstützungsstufen</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Konnektivität</td>
-          <td style="text-align: left">Smartphone-Konnektivität ermöglicht u.a. die Änderung von Motoreinstellungen</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Ladegerät</td>
-          <td style="text-align: left">3A Li-Ionen-Ladegerät mit Rosenberger Magnetstecker</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Ladezeit</td>
-          <td style="text-align: left">2,5 Stunden (100%)</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Lichter Vorne:</td>
-          <td style="text-align: left">Busch+Müller IQ2 EYC</td>
-      </tr>
-      <tr>
-          <td style="text-align: left">Hinten:</td>
-          <td style="text-align: left">LightSKIN in der Sattelstütze integrierte LED-Lichter</td>
-      </tr>
-  </tbody>
+<thead>
+<tr>
+<th>Komponenten</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Rahmen</td>
+<td>Aluminium 6061</td>
+</tr>
+<tr>
+<td>Gabel</td>
+<td>Aluminium 1 1/8&quot;, 12 mm Steckachse</td>
+</tr>
+<tr>
+<td>Kurbelgarnitur</td>
+<td>Aluminium-Legierung 42T, 170 mm</td>
+</tr>
+<tr>
+<td>Tretlager</td>
+<td>Abgedichtetes Tretlager mit Drehmomentsensor</td>
+</tr>
+<tr>
+<td>Antrieb</td>
+<td>Shimano Deore RD-T6000 10-Gang</td>
+</tr>
+<tr>
+<td>Kasette</td>
+<td>Shimano HG500 11-32</td>
+</tr>
+<tr>
+<td>Kette</td>
+<td>Yaban SLA-H10 114L</td>
+</tr>
+<tr>
+<td>Bremsen</td>
+<td>Shimano Deore T6000 hydraulische Scheibenbremsen</td>
+</tr>
+<tr>
+<td>Bremsbeläge</td>
+<td>Shimano G02S</td>
+</tr>
+<tr>
+<td>Reifen</td>
+<td>Continental Top Contact II, 42-622 mm</td>
+</tr>
+<tr>
+<td>Laufräder</td>
+<td>28&quot; Laufräder mit asymmetrischen 18 mm Felgen und gedichteten, industriegelagerten Naben</td>
+</tr>
+<tr>
+<td>Schutzbleche</td>
+<td>Ampler Aluminium Schutzbleche, 60 mm</td>
+</tr>
+<tr>
+<td>Gewicht</td>
+<td>17,2 kg</td>
+</tr>
+<tr>
+<td>Max. Unterstützung</td>
+<td>25 km/h</td>
+</tr>
+<tr>
+<td>Reichweite</td>
+<td>45-100 km je nach Gelände und Einstellung der Unterstützung, durchschnittliche Reichweite 70 km</td>
+</tr>
+<tr>
+<td>Batterie</td>
+<td>48 V 336 Wh LG Li-ion Akku</td>
+</tr>
+<tr>
+<td>Motor</td>
+<td>48 V 250 W Nabenmotor (Hinterrad)</td>
+</tr>
+<tr>
+<td>Kontrollmodus</td>
+<td>Präzise Pedal-Drehmoment spürende Motorsteuerung, 2 Motor-Unterstützungsstufen</td>
+</tr>
+<tr>
+<td>Konnektivität</td>
+<td>Smartphone-Konnektivität ermöglicht u.a. die Änderung von Motoreinstellungen</td>
+</tr>
+<tr>
+<td>Ladegerät</td>
+<td>3A Li-Ionen-Ladegerät mit Rosenberger Magnetstecker</td>
+</tr>
+<tr>
+<td>Ladezeit</td>
+<td>2,5 Stunden (100%)</td>
+</tr>
+<tr>
+<td>Lichter Vorne:</td>
+<td>Busch+Müller IQ2 EYC</td>
+</tr>
+<tr>
+<td>Hinten:</td>
+<td>LightSKIN in der Sattelstütze integrierte LED-Lichter</td>
+</tr>
+</tbody>
 </table>
 <p>So. Passt.</p>
 </article>
