--- a/public/yubikey-smartcard-slot-problem/index.html
+++ b/public/yubikey-smartcard-slot-problem/index.html
@@ -82,6 +82,24 @@ Der Yubikey hat 4 Slots. Einer davon, Slot 9a, ist für die SC Authentifizierung
 <p>Ich hab mal beim Support nachgefragt und das ist tatsächlich so auch nicht möglich. User sollten vor dem Renewal das Certificate auf 9a von Hand löschen und dann ein neues Cert beantragen. Das ist ein derber Fallstrick.</p>
 <p>Da bleibe ich mal ein wenig am Ball und sehe was man da noch tun kann.</p>
 <p>Ansonsten müsste ich meine Leitung davon überzeugen auf Windows Hello for Business und FIDO2 umzusatteln. Dann fehlt aber ihre geliebte SC Removal Policy.</p>
+<p><b>Update 28.10.2024:</b> Der Yubico Support hatte mir nun geantwortet. Dabei einige Details zu dieser Sache und warum man sich durchaus überlegen sollte lieber FIDO2 oder sowas zu nutzen.</p>
+<blockquote>
+Hi Krinkkerz,
+<p>Good question!</p>
+<p>That is correct, slot 9A is associated with the private key used to authenticate the card and the cardholder. This slot is used for things like system login.</p>
+<p>I&rsquo;ve written some further information you may find helpful:</p>
+<p>The GIDS specification that Windows uses, uses a CMAP file (container map), and the first provisioned certificate using the YubiKey Smart Card Minidriver stores the certificate in slot 9A - if you were then to plug this YubiKey into a system without the YubiKey Smart Card Minidriver installed, that certificate would still be usable in the other systems for authentication. GIDS doesn&rsquo;t use slots, it uses containers, and the CMAP file links to where the certificates are stored.</p>
+<p>If an ADCS template is configured to use a new key, the KSP will create a new key container, the YubiKey Smart Card Minidriver will find the next unused slot in its priority list (auth certs: 9a,9d,81,82,83&hellip;,9c,9e; signature certs: 9c,9d,81,82&hellip;,9a;9e), then the cert is loaded into the object corresponding to the new key container&rsquo;s slot.</p>
+<p>It is not possible to specify a specific slot for the certificate at the time it is created unless you delete the previous certificate so it chooses slot 9a.</p>
+<p>According to this Microsoft article:</p>
+<p><i>The certificate propagation service activates when a signed-in user inserts a smart card in a reader that is attached to the computer. This action causes the certificate to be read from the smart card. The certificates are then added to the user&rsquo;s Personal store.</i></p>
+<p>The YubiKey Smart Card Minidriver will allow you to use &ldquo;Use Multiple Authentication Credentials&rdquo; for authentication. However, the retired slots cannot be used for authentication.</p>
+<p>You can find additional information on PIV slots <a href="https://developers.yubico.com/PIV/Introduction/Certificate_slots.html">here</a>.</p>
+<p>I know this is a lot of information, so please let me know if you have any questions after reviewing everything! Thanks!</p>
+<p>Kind regards,
+Michael
+Customer Support Specialist | Yubico</p>
+</blockquote>
 </article>
 <section id="related-content">
 </section>
