--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,8 @@
 <p>Ich hab mal beim Support nachgefragt und das ist tatsächlich so auch nicht möglich. User sollten vor dem Renewal das Certificate auf 9a von Hand löschen und dann ein neues Cert beantragen. Das ist ein derber Fallstrick.</p>
 <p>Da bleibe ich mal ein wenig am Ball und sehe was man da noch tun kann.</p>
 <p>Ansonsten müsste ich meine Leitung davon überzeugen auf Windows Hello for Business und FIDO2 umzusatteln. Dann fehlt aber ihre geliebte SC Removal Policy.</p>
-<p><b>Update 28.10.2024:</b> Der Yubico Support hatte mir nun geantwortet. Dabei einige Details zu dieser Sache und warum man sich durchaus überlegen sollte lieber FIDO2 oder sowas zu nutzen.</p>
+<h2 id="update-28102024">Update 28.10.2024:</h2>
+<p>Der Yubico Support hatte mir nun geantwortet. Dabei einige Details zu dieser Sache und warum man sich durchaus überlegen sollte lieber FIDO2 oder sowas zu nutzen.</p>
 <blockquote>
 Hi Krinkkerz,
 <p>Good question!</p>
