ja geilomat oder

--- a/public/schaukelaufbaublues/index.html
+++ b/public/schaukelaufbaublues/index.html
@@ -240,7 +240,7 @@
                 IRL
             </a>
         
-            <a href="/categories/garten/" >
+            <a href="/categories/garten/" style="background-color: #2a9d8f; color: #fff;">
                 Garten
             </a>
         
