--- a/public/schaukelaufbaublues/index.html
+++ b/public/schaukelaufbaublues/index.html
@@ -240,8 +240,8 @@
                 IRL
             </a>
         
-            <a href="/categories/garten/" style="background-color: #2a9d8f; color: #fff;">
-                Garten
+            <a href="/categories/gardening/" style="background-color: #2a9d8f; color: #fff;">
+                Gardening
             </a>
         
             <a href="/categories/papa-sein/" >
